[package]
name = "subconv"
version = "0.1.0"
authors = ["Yijun Zhao <ariesdevil77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
lazy_static = "1.4.0"
regex = "1"
voca_rs = "1.10.0"
walkdir = "2"